# AmbilightApp

./: .editorconfig  .gitignore  .gitmodules  3RD_PARTY_LICENSES  AmbilightappConfig.h.in  CHANGELOG.md  CMakeLists.txt  Compile and Build - new.bat  Compile and Build.bat  LICENSE  README.md  version
.ci/: ci_build.sh
.github/: FUNDING.yml
.github/workflows/: push-master.yml  upload-to-github-pages.yml
cmake/: Dependencies.cmake  cmake_uninstall.cmake.in  packages.cmake  version.cmake
cmake/arch/: INSTALL  PKGBUILD
cmake/debian/: postinst  preinst  prerm
cmake/desktop/: ambilightapp.desktop  hyperhdr.desktop
cmake/osxbundle/: Info.plist  LICENSE  autorun.scpt
cmake/rpm/: postinst  preinst  prerm
cmake/win/: win.rc.in  win_rc.cmake
include/ambilightimage/: AmbilightImage.h
include/api/: AmbilightAPI.h  BaseAPI.h  CallbackAPI.h  HyperAPI.h
include/base/: AccessManager.h  AmbilightAppInstance.h  AmbilightAppManager.h  ColorCalibration.h  ComponentController.h  DetectionAutomatic.h  DetectionManual.h  Grabber.h  GrabberHelper.h  GrabberWrapper.h  HyperHdrInstance.h  HyperHdrManager.h  ImageColorAveraging.h  ImageToLedManager.h  InstanceConfig.h  LedCalibration.h  LedString.h  Muxer.h  NetworkForwarder.h  RawUdpServer.h  Smoothing.h  SoundCapture.h  SoundCaptureResult.h  SystemControl.h  SystemWrapper.h  VideoControl.h
include/blackborder/: BlackBorderDetector.h  BlackBorderProcessor.h
resources/: CMakeLists.txt  resources.qrc.in
sources/: CMakeLists.txt
sources/ambilightimage/: AmbilightImage.cpp  CMakeLists.txt
www/: index.html
(+661 files in other folders)
